# ros2_llm

./: README.md
ros2_llm/: package.xml  setup.py
ros2_llm/launch/: ros2_llm.launch.py
ros2_llm/ros2_llm/: ros2_llm_node.py  webcam_vlm_node.py
ros2_llm_interfaces/: CMakeLists.txt  package.xml
ros2_llm_interfaces/srv/: InferenceService.srv
